...
        colors = TextFieldDefaults.outlinedTextFieldColors(
            focusedBorderColor = Orange,
            unfocusedBorderColor = Color(0xffE9EBEE)
        ),
        modifier = modifier
            .fillMaxWidth()
            .padding(16.dp).testTag("searchTextField"),
        keyboardOptions = KeyboardOptions.Default.copy(
            imeAction = ImeAction.Done
        ),
        keyboardActions = KeyboardActions(
            onDone = {
                onImeActionPerformed(ImeAction.Done)
...
